Make sure header gradient has good coverage to make the heading text more visible.

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -155,17 +155,17 @@
         }
     }
 
-    &.header-location-bottom.header-gradient-black:after { background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 50%); }
-    &.header-location-bottom.header-gradient-white:after { background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 50%); }
-    &.header-location-bottom.header-gradient-primary:after { background: linear-gradient(to bottom, rgba($primary ,0) 0%,rgba($primary, 1) 50%); }
-    &.header-location-bottom.header-gradient-secondary:after { background: linear-gradient(to bottom, rgba($secondary ,0) 0%,rgba($secondary, 1) 50%); }
-    &.header-location-bottom.header-gradient-tertiary:after { background: linear-gradient(to bottom, rgba($tertiary ,0) 0%,rgba($tertiary, 1) 50%); }
+    &.header-location-bottom.header-gradient-black:after { background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 70%); }
+    &.header-location-bottom.header-gradient-white:after { background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%); }
+    &.header-location-bottom.header-gradient-primary:after { background: linear-gradient(to bottom, rgba($primary ,0) 0%,rgba($primary, 1) 70%); }
+    &.header-location-bottom.header-gradient-secondary:after { background: linear-gradient(to bottom, rgba($secondary ,0) 0%,rgba($secondary, 1) 70%); }
+    &.header-location-bottom.header-gradient-tertiary:after { background: linear-gradient(to bottom, rgba($tertiary ,0) 0%,rgba($tertiary, 1) 70%); }
 
-    &.header-location-top.header-gradient-black:after { background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 50%); }
-    &.header-location-top.header-gradient-white:after { background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 50%); }
-    &.header-location-top.header-gradient-primary:after { background: linear-gradient(to bottom, rgba($primary ,1) 0%,rgba($primary, 0) 50%); }
-    &.header-location-top.header-gradient-secondary:after { background: linear-gradient(to bottom, rgba($secondary ,1) 0%,rgba($secondary, 0) 50%); }
-    &.header-location-top.header-gradient-tertiary:after { background: linear-gradient(to bottom, rgba($tertiary ,1) 0%,rgba($tertiary, 0) 50%); }
+    &.header-location-top.header-gradient-black:after { background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 70%); }
+    &.header-location-top.header-gradient-white:after { background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 70%); }
+    &.header-location-top.header-gradient-primary:after { background: linear-gradient(to bottom, rgba($primary ,1) 0%,rgba($primary, 0) 70%); }
+    &.header-location-top.header-gradient-secondary:after { background: linear-gradient(to bottom, rgba($secondary ,1) 0%,rgba($secondary, 0) 70%); }
+    &.header-location-top.header-gradient-tertiary:after { background: linear-gradient(to bottom, rgba($tertiary ,1) 0%,rgba($tertiary, 0) 70%); }
 
     & > .post-thumbnail {
         position: relative;
